# SASfit

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  CHANGES.txt  CITATION.cff  Copyright_notice.txt  KNOWN_BUGS.txt  Readme.md  Readme.txt  Readme_source.txt  appveyor-test.yml  appveyor.yml  config.ini  sasfit.sh  todo.md
data/: Gz.sas  (+43 more)
src/: AppImageBuilder.template.yml  AppImageBuilder.yml  CMakeLists.txt  CPackConfig.cmake  Doxyfile  Doxyfile.template.txt  FindGSL.cmake  FindTCL.cmake  Findf2c.cmake  Findsasfit_common.cmake  Findsasfit_core.cmake  Findsasfit_ff.cmake  Findsasfit_sq.cmake  SasfitSourceFiles.cmake
src/AndersonAcc4OZ/: README.md
src/appveyor/: 0_install.sh  0_install_linux.sh  0_install_linux4building.sh  0_install_linux4packaging.sh  0_install_macos.sh  0_install_win.bat  0_install_win.sh  2_before_build.sh  4_build.sh  6_after_build.sh  7_testing.sh  8_after_deploy.py  8_after_deploy.sh  8_cloudsmith_upload.py  9_zenodo_upload.py  after_build.sh  after_deploy.sh  appveyor.yml  before_build.sh  build.bat  build.sh  install.bat  install.sh  replace_cffconvert.ipynb
src/cmake/: CPackConfig.cmake  FindFFTW.cmake  FindFFTW.cmake.old  FindFFTW3.cmake  FindGSL.cmake  FindMercurial.cmake  FindOpenMP.cmake  FindPackageHandleStandardArgs.cmake  FindTCL.cmake  FindZLIB.cmake  Findf2c.cmake  Findsasfit.cmake  Findsasfit_common.cmake  Findsasfit_core.cmake  Findsasfit_ff.cmake  Findsasfit_fixed_point_acc.cmake  Findsasfit_frida.cmake  Findsasfit_jburkardt.cmake  Findsasfit_oz.cmake  Findsasfit_peaks.cmake  Findsasfit_sd.cmake  Findsasfit_sq.cmake  Findsundials.cmake  SasfitCmakeUtils.cmake  SasfitSourceFiles.cmake  create_bin_package.list  create_package.cmake  create_source_package.list  create_starpack.cmake  replace_text_in_file.cmake
src/doc/: footer.html  mainpage.h  stylesheet.css
src/external_libs/: Cuba-4.2.tar  README
src/f2c/: CMakeLists.txt  c_cos.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  cabs.c  d_acos.c  d_asin.c  d_atan.c  d_atn2.c  d_cos.c  d_cosh.c  d_exp.c  d_int.c  d_lg10.c  d_log.c  d_mod.c  d_nint.c  d_sin.c  d_sinh.c  d_sqrt.c  d_tan.c  d_tanh.c  f2c.h  f2c.lib  fio.h  h_dnnt.c  h_nint.c  i_dnnt.c  i_nint.c  pow_dd.c  pow_qq.c  pow_zz.c  r_acos.c  r_asin.c  r_atan.c  r_atn2.c  r_cos.c  r_cosh.c  (+18 more)
src/fftw/: CMakeLists.txt
src/gsl/: CMakeLists.txt
src/plugins/: CMakeLists.txt  groups.form_fac.def  groups.general.def  groups.peaks.def  groups.size_distrib.def  groups.struct_fac.def
src/sasfit_cephes/: cephes.html  doubldoc.html  ldoubdoc.html  singldoc.html
src/sasfit_common/: CMakeLists.txt  sasfit_common.c  sasfit_common.decls  sasfit_eps.c  sasfit_error_common.c  sasfit_fft2f.c  sasfit_function.c  sasfit_gamma.c  sasfit_intDE2.c  sasfit_intcc2.c  sasfit_intde1.c  sasfit_intde2.c  sasfit_integrate.c  sasfit_lobatto.c  sasfit_mem.c  sasfit_message.c  sasfit_oz_solver.c  sasfit_plugin_api.c  sasfit_plugin_func.c  sasfit_qwe.c  sasfit_timer.c  sasfit_trapzd.c  sasfit_utils.c
src/sasfit_core/: CMakeLists.txt  sasfit_2d.c  sasfit_analysis.c  sasfit_analysis_tmp.c  sasfit_analytpar.c  sasfit_analytpar_utils.c  sasfit_core.c  sasfit_env.c  sasfit_error_core.c  sasfit_ff.c  sasfit_plugin_api.c  sasfit_plugin_backend.c  sasfit_plugin_db.c  sasfit_sd.c  sasfit_sq.c  sasfit_tclcmd.c  sasfit_vector.c  sf_phys_porod.c
src/sasfit_ff/: CMakeLists.txt  sasfit_Pthirtynine.c  sasfit_ff_A_old.c  sasfit_ff_Andrea1.c  sasfit_ff_BenoitStar.c  sasfit_ff_BiLayerGauss.c  sasfit_ff_BiLayeredVesicle.c  sasfit_ff_BlockCopolymerMicelle.c  sasfit_ff_BroadPeak.c  sasfit_ff_CoPolymerMicelleSphericalProfile.c  sasfit_ff_CylShell_old.c  sasfit_ff_Cylinder.c  sasfit_ff_DAB.c  sasfit_ff_DLCAggregation.c_unused  sasfit_ff_DLS_Sphere_RDG.c  sasfit_ff_DaisyLikeRing.c  sasfit_ff_Disc.c  sasfit_ff_DoubleShellChain.c  sasfit_ff_DoubleShellChain.c_unused  sasfit_ff_DoubleShell_withSD.c  sasfit_ff_ExpShell.c  sasfit_ff_FisherBurford.c_unused  sasfit_ff_FlexibleRingPolymer.c  sasfit_ff_Fractal.c  sasfit_ff_HardSphere.c  sasfit_ff_IsuperparamagneticFFpsiStrobo_old.c  sasfit_ff_JuelichDoubleShell.c  sasfit_ff_KShellcompr.c  sasfit_ff_KholodenkoWorm.c  sasfit_ff_Ksh.c  sasfit_ff_KshExp.c  sasfit_ff_Kshlin.c  sasfit_ff_Langevin.c  sasfit_ff_LayeredCentroSymmetricXS.c  sasfit_ff_LinShell.c  sasfit_ff_MLVesicleFrielinghaus.c  sasfit_ff_MassFractExp.c  sasfit_ff_MassFractExp.c_unused  sasfit_ff_MassFractExp_mpow_x_a.c  sasfit_ff_MassFractExp_mpow_x_a.c_unused  (+76 more)
src/sasfit_fixed_point_acc/: CMakeLists.txt  sasfit_fixed_point_acc.c
src/sasfit_frida/: CMakeLists.txt  blas0.c  blas1_d.c  linpack_d.c  nnls.c  sasfit_frida_solver.c
src/sasfit_gmres/: sasfit_gmres_utils.c  sasfit_netlib_f2c_daxpy.c  sasfit_netlib_f2c_dcopy.c  sasfit_netlib_f2c_ddot.c  sasfit_netlib_f2c_dgemv.c  sasfit_netlib_f2c_dnrm2.c  sasfit_netlib_f2c_drot.c  sasfit_netlib_f2c_drotg.c  sasfit_netlib_f2c_dscal.c  sasfit_netlib_f2c_dtrsv.c  sasfit_netlib_f2c_gmres.c  sasfit_netlib_f2c_lsame.c  sasfit_netlib_f2c_xerbla.c
src/sasfit_jburkardt/: cdflib.c  filon_rule.c  jburkardt_utils.c  prob.c  smolyak.c  sparse_grid_cc.c  sparse_grid_hw.c
src/sasfit_old/: CMakeLists.txt  README.TXT  SASFIT_covsrt.c  SASFIT_fit.c  SASFIT_gammaq.c  SASFIT_gaussj.c  SASFIT_gcf.c  SASFIT_gser.c  SASFIT_indexx.c  SASFIT_mrqcof.c  SASFIT_mrqmin.c  SASFIT_nrutil.c  SASFIT_polint.c  SASFIT_qromb.c  SASFIT_resolution.c  SASFIT_trapzd.c  SASFIT_x_tcl.c  bessi0.c  bessj0.c  bessj1.c  ei.c  erf.c  gammp.c  gaussj.c  jfrac.c  pol.c  sasfit.c  sasfit_extrapol.c
src/sasfit_oz/: CMakeLists.txt  Makefile  OZ_potential_Depletion.c  OZ_potential_Ionic_Microgel.c  OZ_potential_Lennard_Jones.c  OZ_potential_Soft_Sphere.c  OZ_potentials.h  OZ_solver.h  main.c  sasfit_oz_potential_FermiDistributionModel.c  sasfit_oz_potential_HS_3Yukawa.c  sasfit_oz_potential_Hard_Sphere.c  sasfit_oz_potential_Lennard_Jones.c  sasfit_oz_potential_Sticky_Hard_Sphere.c  sasfit_oz_potential_depletion.c  sasfit_oz_potential_dlvo.c  sasfit_oz_potential_dlvo_hydra.c  sasfit_oz_potential_ggcm-n.c  sasfit_oz_potential_hard_sphere.c  sasfit_oz_potential_ionic_microgel.c  (+9 more)
(+4397 files in other folders)
